Make Lucene directory reader and index search abstract